--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,11 @@ defaults:
 jobs:
   macOS:
     env:
+      BUILD_PARALLEL_LEVEL: 4
+      BUILD_TARGET: all man
       BUILD_TESTS: ON
       BUILD_TYPE: ${{ matrix.build_type || 'Debug' }}
+      CXXFLAGS: -pedantic -Werror -Wextra
       LUA_VERSION: ${{ matrix.lua_version || '' }}
       LUAJIT_OPTION: ${{ matrix.luajit_option && 'ON' || 'OFF' }}
       PGDATA: /tmp/postgresql/data
@@ -40,10 +43,13 @@ jobs:
 
   Ubuntu:
     env:
+      BUILD_PARALLEL_LEVEL: 4
+      BUILD_TARGET: all man
       BUILD_TESTS: ON
       BUILD_TYPE: ${{ matrix.build_type || 'Debug' }}
       CC: ${{ matrix.cc || 'gcc' }}
       CPP_VERSION: ${{ matrix.cpp_version || '' }}
+      CXXFLAGS: -pedantic -Werror -Wextra
       DEBIAN_FRONTEND: noninteractive
       LUA_VERSION: ${{ matrix.lua_version || '' }}
       LUAJIT_OPTION: ${{ matrix.luajit_option && 'ON' || 'OFF' }}
@@ -198,8 +204,13 @@ jobs:
 
   Windows:
     env:
-      GETOPT_INCLUDE_DIR: ${{ github.workspace }}/../wingetopt/src
-      GETOPT_LIBRARY: ${{ github.workspace }}/../wingetopt/build/Release/wingetopt.lib
+      BUILD_TESTS: ON
+      BUILD_TYPE: Release
+      CMAKE_OPTIONS: >-
+        -DBoost_USE_STATIC_LIBS=ON
+        -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+        -LA
+      LUA_VERSION: ON
       VCPKG_DEFAULT_BINARY_CACHE: C:\vcpkg_binary_cache
 
     name: windows${{ matrix.image_tag }}
@@ -227,12 +238,10 @@ jobs:
           if [ ! -d "${VCPKG_DEFAULT_BINARY_CACHE}" ]; then
             mkdir "${VCPKG_DEFAULT_BINARY_CACHE}"
           fi
-      - uses: ./.github/actions/win-postgres
-      - uses: ./.github/actions/win-install
-      - uses: ./.github/actions/win-getopt
-      - uses: ./.github/actions/win-cmake
-      - uses: ./.github/actions/win-build
-      - uses: ./.github/actions/win-test
+      - uses: ./.github/actions/windows-postgres
+      - uses: ./.github/actions/windows-prerequisites
+      - uses: ./.github/actions/build
+      - uses: ./.github/actions/test
       - name: Package osm2pgsql
         run: |
           mkdir c:/artifact/
@@ -268,7 +277,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: osm2pgsql-win64
-      - uses: ./.github/actions/win-postgres
+      - uses: ./.github/actions/windows-postgres
       - name: Set up database
         run: |
           & $env:PGBIN\createdb osm
