--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,90 +202,75 @@ jobs:
         with:
           wrapper: pg_virtualenv
 
-  Windows:
-    env:
-      BUILD_TESTS: ON
-      BUILD_TYPE: Release
-      CMAKE_OPTIONS: >-
-        -DBoost_USE_STATIC_LIBS=ON
-        -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
-        -LA
-      LUA_VERSION: ON
-      VCPKG_DEFAULT_BINARY_CACHE: C:\vcpkg_binary_cache
-
-    name: windows${{ matrix.image_tag }}
-
-    runs-on: windows-${{ matrix.image_tag }}
-
+  windows:
     strategy:
       fail-fast: false
       matrix:
-        image_tag: [2019, 2022]
-
+        os: [windows-2019, windows-2022]
+    runs-on: ${{ matrix.os }}
+    env:
+      GETOPT_INCLUDE_DIR: ${{ github.workspace }}/../wingetopt/src
+      GETOPT_LIBRARY: ${{ github.workspace }}/../wingetopt/build/Release/wingetopt.lib
+      VCPKG_DEFAULT_BINARY_CACHE: C:/vcpkg_binary_cache
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
         with:
-          path: ${{ env.VCPKG_DEFAULT_BINARY_CACHE }}
-          key: vcpkg-binary-cache-windows-${{ matrix.image_tag }}
-      - uses: actions/cache@v3
+          path: |
+            C:/vcpkg_binary_cache
+          key: vcpkg-binary-cache-${{ matrix.os }}
+      - uses: actions/cache@v2
         with:
           path: |
             C:/postgis.zip
           key: postgis-cache
       - name: Prepare cache
-        run: |
-          if [ ! -d "${VCPKG_DEFAULT_BINARY_CACHE}" ]; then
-            mkdir "${VCPKG_DEFAULT_BINARY_CACHE}"
-          fi
-      - uses: ./.github/actions/windows-postgres
-      - uses: ./.github/actions/windows-prerequisites
-      - uses: ./.github/actions/build
-      - uses: ./.github/actions/test
+        run: if [ ! -d C:/vcpkg_binary_cache ]; then mkdir C:/vcpkg_binary_cache; fi
+        shell: bash
+      - uses: ./.github/actions/win-postgres
+      - uses: ./.github/actions/win-install
+      - uses: ./.github/actions/win-getopt
+      - uses: ./.github/actions/win-cmake
+      - uses: ./.github/actions/win-build
+      - uses: ./.github/actions/win-test
       - name: Package osm2pgsql
         run: |
           mkdir c:/artifact/
           mkdir c:/artifact/osm2pgsql-bin
           cp -r Release/* ../README.md ../COPYING ../*.style ../scripts ../flex-config c:/artifact/osm2pgsql-bin/
+        shell: bash
         working-directory: build
-        if: matrix.image_tag == '2022'
+        if: matrix.os == 'windows-2022'
       - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: osm2pgsql-win64
           path: c:/artifact
-        if: matrix.image_tag == '2022'
+        if: matrix.os == 'windows-2022'
 
   windows-package:
-    env:
-      OSMFILE: monaco-latest.osm.bz2
-      OSMURL: https://download.geofabrik.de/europe/monaco-latest.osm.bz2
-
-    name: windows2022 (Install & import OSM data)
-
-    needs: Windows
-
+    needs: windows
     runs-on: windows-2022
-
+    env:
+      OSMURL: https://download.geofabrik.de/europe/monaco-latest.osm.bz2
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
         with:
           path: |
             C:/postgis.zip
           key: postgis-cache
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v2
         with:
           name: osm2pgsql-win64
-      - uses: ./.github/actions/windows-postgres
+      - uses: ./.github/actions/win-postgres
       - name: Set up database
         run: |
           & $env:PGBIN\createdb osm
-          & $env:PGBIN\psql -d osm -c "CREATE EXTENSION hstore;"
-          & $env:PGBIN\psql -d osm -c "CREATE EXTENSION postgis;"
+          & $env:PGBIN\psql -d osm -c "CREATE EXTENSION hstore; CREATE EXTENSION postgis;"
         shell: pwsh
       - name: Get test data
-        run: (new-object net.webclient).DownloadFile($env:OSMURL, $env:OSMFILE)
-        shell: pwsh
-      - name: Execute osm2pgsql
-        run: ./osm2pgsql-bin/osm2pgsql --slim -d osm ${OSMFILE}
+        run: (new-object net.webclient).DownloadFile($env:OSMURL, "testfile.osm.bz2")
+      - name: Exceute osm2pgsql
+        run: ./osm2pgsql-bin/osm2pgsql --slim -d osm testfile.osm.bz2
+        shell: bash
