--- a/.github/actions/ubuntu-prerequisites/action.yml
+++ b/.github/actions/ubuntu-prerequisites/action.yml
@@ -1,20 +1,19 @@
----
-name: Install Prerequisites on Ubuntu
+name: 'Install Prerequisites on Ubuntu'
 
 runs:
-  using: composite
+  using: "composite"
 
   steps:
     - name: Remove preinstalled postgresql
       run: |
-        sudo apt-get purge -qq postgresql*
+        sudo apt-get remove -yq postgresql*
         sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
         sudo apt-get update -qq
-      shell: bash --noprofile --norc -euxo pipefail {0}
+      shell: bash
 
     - name: Install software
       run: |
-        sudo apt-get install -qq --no-install-suggests --no-install-recommends \
+        sudo apt-get install -yq --no-install-suggests --no-install-recommends \
           libboost-filesystem-dev \
           libboost-system-dev \
           libbz2-dev \
@@ -32,7 +31,7 @@ runs:
           python3-setuptools \
           zlib1g-dev
         pip3 install behave
-      shell: bash --noprofile --norc -euxo pipefail {0}
+      shell: bash
 
     - name: Install compiler and set CC/CXX
       run: |
@@ -54,21 +53,21 @@ runs:
     - name: Install Lua
       run: |
         if [ -n "${LUA_VERSION:-}" ]; then
-          sudo apt-get install -qq --no-install-suggests --no-install-recommends liblua${LUA_VERSION}-dev lua${LUA_VERSION}
+          sudo apt-get install -yq --no-install-suggests --no-install-recommends liblua${LUA_VERSION}-dev lua${LUA_VERSION}
         fi
-      shell: bash --noprofile --norc -euxo pipefail {0}
+      shell: bash
 
     - name: Install LuaJIT
       run: |
         if [ "${LUAJIT_OPTION:-}" = "ON" ]; then
-          sudo apt-get install -qq --no-install-suggests --no-install-recommends libluajit-5.1-dev
+          sudo apt-get install -yq --no-install-suggests --no-install-recommends libluajit-5.1-dev
         fi
-      shell: bash --noprofile --norc -euxo pipefail {0}
+      shell: bash
 
     - name: Adapt postgresql configuration
       run: |
         echo 'fsync = off' | sudo tee /etc/postgresql/${POSTGRESQL_VERSION}/main/conf.d/local.conf
+        echo 'synchronous_commit = off' | sudo tee -a /etc/postgresql/${POSTGRESQL_VERSION}/main/conf.d/local.conf
         echo 'full_page_writes = off' | sudo tee -a /etc/postgresql/${POSTGRESQL_VERSION}/main/conf.d/local.conf
         echo 'shared_buffers = 1GB' | sudo tee -a /etc/postgresql/${POSTGRESQL_VERSION}/main/conf.d/local.conf
-        echo 'synchronous_commit = off' | sudo tee -a /etc/postgresql/${POSTGRESQL_VERSION}/main/conf.d/local.conf
-      shell: bash --noprofile --norc -euxo pipefail {0}
+      shell: bash
