Revert more `formatting` changes

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -16,31 +16,28 @@ runs:
       - name: configure
         run: |
           CMAKE_OPTIONS="${CMAKE_OPTIONS:--LA}"
-
           if [ -z "${LUA_VERSION:-}" ]; then
-            CMAKE_OPTIONS="${CMAKE_OPTIONS} -DWITH_LUA=OFF"
+            CMAKE_OPTIONS="$CMAKE_OPTIONS -DWITH_LUA=OFF"
           else
-            CMAKE_OPTIONS="${CMAKE_OPTIONS} -DWITH_LUAJIT=${LUAJIT_OPTION:-OFF}"
+            CMAKE_OPTIONS="$CMAKE_OPTIONS -DWITH_LUAJIT=${LUAJIT_OPTION:-OFF}"
           fi
           if [ -n "${USE_PROJ_LIB:-}" ]; then
-            CMAKE_OPTIONS="${CMAKE_OPTIONS} -DUSE_PROJ_LIB=${USE_PROJ_LIB}"
+            CMAKE_OPTIONS="$CMAKE_OPTIONS -DUSE_PROJ_LIB=$USE_PROJ_LIB"
           fi
           if [ -n "${CPP_VERSION:-}" ]; then
-            CMAKE_OPTIONS="${CMAKE_OPTIONS} -DCMAKE_CXX_STANDARD=${CPP_VERSION}"
+            CMAKE_OPTIONS="$CMAKE_OPTIONS -DCMAKE_CXX_STANDARD=$CPP_VERSION"
+          fi
+          if [ -n "${BUILD_TYPE:-}" ]; then
+            CMAKE_OPTIONS="$CMAKE_OPTIONS -DCMAKE_BUILD_TYPE=$BUILD_TYPE"
           fi
           if [ -n "${BUILD_TESTS:-}" ]; then
             CMAKE_OPTIONS="${CMAKE_OPTIONS} -DBUILD_TESTS=${BUILD_TESTS}"
           fi
-          if [ -n "${BUILD_TYPE:-}" ]; then
-            CMAKE_OPTIONS="${CMAKE_OPTIONS} -DCMAKE_BUILD_TYPE=${BUILD_TYPE}"
-          fi
           if [ -n "${INSTALL_PREFIX:-}" ]; then
             CMAKE_OPTIONS="${CMAKE_OPTIONS} -DCMAKE_INSTALL_PREFIX=${INSTALL_PREFIX}"
           fi
-          cmake \
-            ${CMAKE_OPTIONS} \
-            ..
-        shell: bash --noprofile --norc -euxo pipefail {0}
+          cmake $CMAKE_OPTIONS ..
+        shell: bash
         working-directory: build
 
       - name: build
